fix: hide scrollbar on chrome

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
   --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 * {
   scrollbar-width: none;
   -ms-overflow-style: none;
